popularity-contest (1.49) UNRELEASED; urgency=low

  [ Bill Allombert ]
  * debian/control: 
    - Build-Depends: raise debhelper version to (>=5) to match compat.

  [ Christian Perrier ]
  * Translations:
    - Telugu. Closes: #544044

 -- Bill Allombert <ballombe@debian.org>  Sun, 28 Jun 2009 17:18:51 +0200

popularity-contest (1.48) unstable; urgency=low

  [ Bill Allombert ]
  * popcon.pl:
    - sync with popcon.debian.org version: add release names.
  * popularity-contest: 
    - use "dpkg --print-architecture" instead of 
          "dpkg --print-installation-architecture". Closes: #529393
  * debian/control: 
    - Updated Standards-Version from 3.8.0 to 3.8.1.  No change needed.
  * debian/compat:
    - Set debhelper compatibility level to 5

  [ Christian Perrier ]
  * Translations:
    - Slovak updated. Closes: #517101

 -- Bill Allombert <ballombe@debian.org>  Sun, 14 Jun 2009 18:10:30 +0200

popularity-contest (1.47) unstable; urgency=low

  * Please note when reading stats that lenny was released with 1.46.
  [ Christian Perrier ]
  * Translations:
    - Macedonian
    - Asturian added. Closes: #511141
    - Kazakh added. Closes: #514590

  [ Bill Allombert ]
  * debian/popularity-contest.8, FAQ:
    - Updated to reflect move to /etc/cron.daily. Closes: #500431
      Thanks William Dode.
  * FAQ: Fix typo reported by Raphael Geissert. Closes: #496605
  * debian/preinst, debian/postrm:
    - Add 'set -e'.

 -- Bill Allombert <ballombe@debian.org>  Fri, 20 Feb 2009 11:33:21 +0100

popularity-contest (1.46) unstable; urgency=low

  [ Petter Reinholdtsen ]
  * Make sure to reinsert the ID if it is missing in the configuration
    file.  Based on bug reported by Alf-Tonny Batz.

  [ Christian Perrier ]
  * Translations:
    - Irish. Closes: #480871
    - Belarusian. Closes: #483527
    - Korean. Closes: #491413
    - Georgian. Closes: #498418

  [ Bill Allombert ]
  * popcon-stat.pl:
    - sync with popcon.debian.org version: add graphs restricted to last 3