@@ -2,7 +2,7 @@
 
 $results="../popcon-mail/results";
 $popcon="../www";
-my $mirrorbase = "/org/ftp.root/debian";
+my $mirrorbase = "/org/ftp.debian.org/ftp";
 my $docurlbase = "";
 %popconver=("1.28" => "sarge", "1.41" => "etch", "1.46" => "lenny");
 %popver=();
@@ -124,10 +124,16 @@ sub print_by
 #The fields below are the sum for all the packages maintained by that
 #developer:
 EOF
-"source" => <<"EOF");
+"source" => <<"EOF",
 #<name> is the source package name;
 #
 #The fields below are the sum for all the binary packages generated by
+#that source package:
+EOF
+"sourcemax" => <<"EOF");
+#<name> is the source package name;
+#
+#The fields below are the maximum for all the binary packages generated by
 #that source package:
 EOF
 
@@ -203,6 +209,7 @@ sub mark
 %winner=();
 %maintpkg=();
 %sourcepkg=();
+%sourcemax=();
 @fields=("inst","vote","old","recent","no-files");
 
 for $file ("slink","slink-nonUS","potato","potato-nonUS",
@@ -284,6 +291,9 @@ while(<PKG>)
 		  $pkg{$name}->{$f}=$v;
 		  $maintpkg{$maint{$name}}->{$f}+=$v;
 		  $sourcepkg{$source{$name}}->{$f}+=$v;
+                  my($sm)=$sourcemax{$source{$name}}->{$f};
+		  $sourcemax{$source{$name}}->{$f}=$v 
+                    if (!defined($sm) || $sm < $v);
 	  }
   }
   elsif ($type eq "Architecture:")
@@ -328,6 +338,7 @@ for $sec (".",@dists)
 }
 make ("maint", \%maintpkg, @maints);
 make ("source", \%sourcepkg, @sources);
+make ("sourcemax", \%sourcemax, @sources);
 
 for $sec (@dists)
 {
@@ -401,8 +412,11 @@ mark "Building winner pages";
 	printf HTML ("<p>Statistics by maintainers sorted by fields: <pre>",$sec);
 	print_by ("maint",$_) for (@fields);
 	print HTML ("</pre>\n </p> \n");
-	printf HTML ("<p>Statistics by source packages sorted by fields: <pre>",$sec);
+	printf HTML ("<p>Statistics by source packages (sum) sorted by fields: <pre>",$sec);
 	print_by ("source",$_) for (@fields);
+	print HTML ("</pre>\n </p> \n");
+	printf HTML ("<p>Statistics by source packages (max) sorted by fields: <pre>",$sec);
+	print_by ("sourcemax",$_) for (@fields);
 	print HTML ("</pre>\n </p> \n");
 	printf HTML ("<p>Statistics for sections sorted by fields\n <pre>\n");
   	for $dir ("main","contrib","non-free","non-US","unknown")
